--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
-copy colemak to russian
-find real diff in various source/russian*.keylayout
-copy parts from russian without modifiers, with shift and with caps
+finish resolve_clashes:
+	find all keys in 0, 1, 2 which need to be duplicated in actions:
+		for 0 and 2: all except 0-9 and further; for 1: all
+	find all action clashes between 0; 1,2; others and duplicate actions in form a10-1
+finish russian: for without modifiers, with shift and with caps
+find all redundant actions
